# Gewy

./: Cargo.toml
examples/: buttons.rs  flexbox.rs
src/: app.rs  color.rs  dsl.rs  err.rs  event.rs  extensions.rs  gewy.rs  gui.rs  input.rs  lib.rs  main.rs  math.rs  node.rs  paint.rs  pattern.rs  raw.rs  shader.wgsl  style.rs  style_calc.rs  util.rs  view.rs  widget.rs
src/integration/: winit.rs
src/wgpu/: backend.rs  mod.rs  paint.rs  shader.wgsl  view.rs
src/widget/: button.rs  mod.rs
src/winit/: app.rs
