[package]
name = "another-rust-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.16"
winit = "0.28"
slotmap = "1.0"
glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1.13", features = ["derive"] }
derive_more = "0.99"
env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"
bitflags = "2.3.3"
