[package]
name = "gewy"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.16"
winit = "0.28"
slotmap = "1.0"
glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1.13", features = ["derive"] }
derive_more = "0.99"
env_logger = "0.10"
log = "0.4"
pollster = { version = "0.3.0", features = ["macro"] }
bitflags = "2.3.3"
tinyvec = { version = "1.6.0", features = ["alloc"] }
anyhow = "1.0.72"
